--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ a:hover {
     height: 300px;
     width: 400px;
     margin: 3rem 0 0;
-    background-image: url(./Escritórios-pequenos-1.jpg);
+    background-image: url(https://s32907.pcdn.co/wp-content/uploads/2019/09/Escrit%C3%B3rios-pequenos-1.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
